--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,11 @@ h1 {
 		flex-direction:column;
 	}
 	.hero-blue {
+		@media (max-width:764px){
+			h1{
+				font-size:40px;
+			}
+		}
 		flex:1;
 		background-color: var(--blue-100);
 		border-radius:30px;
