--- a/styles.css
+++ b/styles.css
@@ -80,9 +80,11 @@ header {
 	}
 
 	nav {
+		
 			background-color: #1c1b1f;
 			border-radius: 23px; /* Rounded corners */
 			padding: 10px 20px;
+			
 		
 		display:flex;
 		align-items:center;
@@ -116,9 +118,10 @@ header {
 			padding:10px;
 			@media (max-width:768px){
 				display:inline-block;
-				position:absolute;
-				top:20px;
-				right:20px;
+				position:fixed;
+				top:2px;
+				bottom: 2px;
+				right:0px;
 				
 				
 			}
@@ -137,6 +140,7 @@ header {
 		
 		
 		nav {
+			
 			background-color: inherit;
 			margin-top:10px;
 			width:100%;
@@ -174,10 +178,11 @@ section {
 
 .button {
 	display:inline-block;
-	padding:10px 30px;
+	padding:10px 20px;
 	background-color: var(--blue);
 	color: var(--base-100);
 	border-radius:10px;
+	
 	transition: ease 0.3s all;
 	&:hover {
 		text-decoration:none;
@@ -196,8 +201,9 @@ section {
 		}
 	}
 	&.black {
-		background-color: greenyellow;
-		color: black;
+		background-color: #248a0d;
+		color: whie;
+		font-weight: bold;
 		&:hover {
 			background-color: white;
 			color: black;
@@ -237,16 +243,23 @@ h1 {
 		border-radius:30px;
 		padding:30px;
 		display:flex;
+	
 		flex-direction:column;
 		justify-content:center;
 		span {
 			@media (max-width:768px){
 				display:none;
+				
+				
 			}
 		}
 		.call-to-action {
+			@media (max-width:764px){
+				display: inline;
+			}
 			margin-top:20px;
 			margin-bottom:10px;
+			
 			a {
 				margin-right:10px;
 				margin-bottom:10px;
@@ -263,7 +276,7 @@ h1 {
 	}
 	.hero-yellow {
 		flex:1;
-		background-color: greenyellow;
+		background-color: #248a0d;
 		border-radius:30px;
 		padding:0px 30px;
 		display:flex;
@@ -315,15 +328,20 @@ h2 {
     background-color: transparent;
     border: none;
     color: #000000;
-    padding: 20px;
+    padding: 10px;
     border-radius: 30px;
     width: 100%;
     text-align: center;
     display: flex;
     flex-direction: column;
-
+	
     align-items: center;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
+}
+
+.card h3 {
+    margin-top: 0; /* Remove top margin */
+     /* Optional: Add slight padding if needed */
 }
 
 /* Responsive adjustments */
@@ -336,14 +354,14 @@ h2 {
 @media (max-width: 768px) {
     .card {
         width: 100%;
-        padding: 15px;
+        padding: 8px;
     }
 }
 
 @media (max-width: 480px) {
     .card {
         width: 100%;
-        padding: 10px;
+        padding: 5pxx;
         border-radius: 20px;
     }
 }
@@ -360,7 +378,7 @@ h2 {
 .project-stack {
     display: flex;
     flex-wrap: wrap;
- 
+
     gap: 7px; /* Adjust spacing between badges */
     padding: 10px;
 }
