--- a/styles/About.css
+++ b/styles/About.css
@@ -168,19 +168,13 @@ header {
 	}
 }
 
-.connect{
-	align-items: center;
-	align-items: center;
-	margin: auto;
-}
-
 section {
 	max-width:1440px;
 	margin:auto;
-	gap:25px;
-	margin-top:75px;
-	margin-bottom:75px;
-
+	gap:30px;
+	margin-top:4px;
+	margin-bottom:17px;
+	
 	@media (max-width:1440px){
 		padding-left:30px;
 		padding-right:30px;
@@ -194,7 +188,7 @@ section {
 h1 {
 	font-size:64px;
 	line-height:1;
-	margin-bottom:10px;
+	margin-bottom:px;
 	small {
 		display:block;
 		font-weight:100;
@@ -204,27 +198,26 @@ h1 {
 	}
 }
 
+
+
+
 .hero {
 	display:flex;
-	
 	@media (max-width:1024px){
 		flex-direction:column;
 	}
 	.hero-blue {
-
 		@media (max-width:764px){
 			h1{
 				font-size:40px;
 			}
 		}
 		flex:1;
-		
 		background-color:#1c1b1f;
 		border-radius:30px;
 		padding:30px;
-		
 		display:flex;
-	
+		font-size:24px;
 		flex-direction:column;
 		justify-content:center;
 		span {
@@ -234,12 +227,20 @@ h1 {
 				
 			}
 		}
-		
-		.social-links {
-			margin-top: 15px;
+		.call-to-action {
+			@media (max-width:764px){
+				display: inline;
+			}
+			margin-top:20px;
+			margin-bottom:10px;
 			
 			a {
-				
+				margin-right:10px;
+				margin-bottom:10px;
+			}
+		}
+		.social-links {
+			a {
 				&:hover {
 					text-decoration:none;
 				}
@@ -256,21 +257,20 @@ h1 {
 		justify-content:center;
 		align-items:flex-end;
 		img {
-			margin-top:-60px;
-			max-width:420px;
+			margin-top:-5px;
+			max-width:350px;
+			
 		}
-		
 		
 	}
 }
-
 
 
 .footer {
 	background-color: black;
 	color: white;
 	text-align: center;
-	padding: 15px;
+	padding: 30px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -293,13 +293,14 @@ h1 {
 		margin: 0px;
 	}
 }
+
 h2 {
-	font-size:64px;
-	line-height:1;
-	margin-bottom:10px;
+	font-size:54px;
+	
+	padding-bottom: 25px;
 	text-align:center;
 	color:white;
-	padding:30px;
+
 	small {
 		display:block;
 		font-weight:100;
@@ -309,166 +310,13 @@ h2 {
 	@media (max-width:1024px){
 		font-size:48px;
 	}
-}
-
-
-.logos {
-    display:flex;
-	@media (max-width:1024px){
-		flex-direction:column;
-	}
-    max-width: 1440px;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-top: 30px;
-}
-
-.card {
-    flex: 1;
-    background-color: transparent;
-    border: none;
-    color: #000000;
-    padding: 10px;
-    border-radius: 30px;
-    width: 100%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
 	
-    align-items: center;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
 }
-
-.card h3 {
-    margin-top: 0; /* Remove top margin */
-     /* Optional: Add slight padding if needed */
-}
-
-/* Responsive adjustments */
-@media (max-width: 1024px) {
-    .card {
-        width: 100%;
-    }
-}
-
-@media (max-width: 768px) {
-    .card {
-        width: 100%;
-        padding: 8px;
-    }
-}
-
-@media (max-width: 480px) {
-    .card {
-        width: 100%;
-        padding: 5pxx;
-        border-radius: 20px;
-    }
-}
-
-.badge-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 12px;
-    margin-top: 20px;
-}
-
-.project-stack {
-    display: flex;
-    flex-wrap: wrap;
-
-    gap: 7px; /* Adjust spacing between badges */
-    padding: 10px;
-}
-
-.badge2 {
-    padding: 8px 15px;
-    background-color: #f7e89f; /* Adjust as needed */
-    border-radius: 20px;
-    font-size: 14px;
-    font-weight: bold;
-	
-   
-}
-
-.badge {
-	background-color: #6aa9f2;
-    color: black;
-    padding: 4px 10px;
-    border-radius: 20px;
-    font-size: 16px;
-    font-family: Arial, sans-serif;
-    display: inline-block;
-    line-height: 1.6;
-}
-
-/* Responsive Skills Section */
-.skills {
-	h2{
-		margin-bottom: -5px;
-	}
-    .holder-blue {
-		
-        background-color: #1c1b1f;
-        border-radius: 30px;
-        padding: 30px;
-        display: flex;
-        flex-wrap: wrap; /* Allows wrapping for responsiveness */
-        gap: 20px;
-        
-        @media (max-width: 1024px) {
-            flex-direction: column;
-            padding: 25px;
-        }
-
-        @media (max-width: 768px) {
-            padding: 20px;
-        }
-
-        .left-column {
-            flex: 1;
-            
-            ul {
-                list-style-type: none;
-                gap: 10px;
-                margin-right: 100px;
-                margin-bottom: 20px;
-                
-                @media (max-width: 768px) {
-                    margin-right: 0;
-                    text-align: center;
-                }
-
-                li {
-                    display: inline-block;
-                    background-color: var(--blue-400);
-                    padding: 10px 20px;
-                    border-radius: 15px;
-                    margin-bottom: 10px;
-                }
-            }
-        }
-
-        .right-column {
-            flex: 1;
-            p {
-                margin-bottom: 20px;
-                text-align: center;
-            }
-        }
-    }
-}
-
-
-
-
 
 
 html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+
 }
